Tests/CompilerTests/negative/missing-return-ascription.diagnostics.expected
negative/missing-return-ascription.hylo:3.16: error: missing return type ascription
subscript foo() { () }
               ^
